src/command/api_key/list/snapshots/rover__command__api_key__list__output__tests__text_snapshot_with_a_resume_note.snap
---
source: src/command/api_key/list/output.rs
expression: strip_ansi_codes(&output.text()).to_string()
---
┌─────────┬─────────────┬────────────────────────────┬────────────┐
│ ID      ┆ Name        ┆ Created At                 ┆ Expires At │
╞═════════╪═════════════╪════════════════════════════╪════════════╡
│ key-123 ┆ router-prod ┆ 2026-01-04 12:00:00 +00:00 ┆ Never      │
└─────────┴─────────────┴────────────────────────────┴────────────┘

Client-credential pairs
┌───────────┬───────────┬───────────┬────────────────────────────┬─────────────────┐
│ Name      ┆ Client ID ┆ Graphs    ┆ Created At                 ┆ Created By      │
╞═══════════╪═══════════╪═══════════╪════════════════════════════╪═════════════════╡
│ ci-deploy ┆ c_8f2a    ┆ inventory ┆ 2026-09-25 16:00:00 +00:00 ┆ user-123 (user) │
└───────────┴───────────┴───────────┴────────────────────────────┴─────────────────┘

More client-credential pairs are available. Resume with `--after cursor-1`.
